syntax = "proto3";

import "google/protobuf/wrappers.proto";

option csharp_namespace = "PasswordBoxGrpcServer";

package passwordbox;

// The greeting service definition.
service PasswordBox {

  rpc RegisterUser (RegisterUserRequest) returns (RegisterUserReply);
  rpc AuthenticateUser (AuthenticateUserRequest) returns (AuthenticateUserReply);
  rpc CreatePassword (CreatePasswordRequest) returns (CreatePasswordReply);
}

message RegisterUserRequest {
	string login = 1;
	string password = 2;
}

message RegisterUserReply {
	bool success = 1;
}

message AuthenticateUserRequest {
	string login = 1;
	string password = 2;
}

message AuthenticateUserReply {
	bool success = 1;
}

message CreatePasswordRequest {
	string userLogin = 1;
	string title = 2;
	string login = 3;
	string password = 4;
	string image = 5;
	google.protobuf.StringValue commentary = 6;
}

message CreatePasswordReply {
	bool success = 1; 
}
